[gd_scene load_steps=9 format=3 uid="uid://j7pjay1dl00g"]

[ext_resource type="Script" uid="uid://sbbnjvcwvkj4" path="res://world.gd" id="1_4wyf3"]
[ext_resource type="PackedScene" uid="uid://cr1n41xvonqh2" path="res://scenes/stages/stage.tscn" id="1_rwgxs"]
[ext_resource type="PackedScene" uid="uid://d4i34lunweefv" path="res://scenes/characters/player.tscn" id="2_4wyf3"]
[ext_resource type="PackedScene" uid="uid://clbt88t8qpsy2" path="res://scenes/characters/luz.tscn" id="5_4mrxx"]
[ext_resource type="PackedScene" uid="uid://bqckl2sfrlum7" path="res://scenes/characters/camera.tscn" id="5_qfnet"]
[ext_resource type="PackedScene" uid="uid://cr3i31aftkdio" path="res://scenes/characters/acao.tscn" id="7_7r4gi"]
[ext_resource type="Script" uid="uid://djuxiumb33n6i" path="res://scenes/enemy_spawner.gd" id="9_7r4gi"]
[ext_resource type="PackedScene" uid="uid://cdsb5g5pljr6r" path="res://scenes/ui/game_ui.tscn" id="9_w7kh3"]

[node name="World" type="Node2D"]
script = ExtResource("1_4wyf3")

[node name="Stage" parent="." instance=ExtResource("1_rwgxs")]
position = Vector2(-5, -6)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(963, 539)
limit_left = 10
limit_top = 0
limit_right = 1900
limit_bottom = 1070
limit_smoothed = true

[node name="ActorConteiner" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="ActorConteiner" instance=ExtResource("2_4wyf3")]
position = Vector2(944, 775)
speed = 700.0

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1844, 958)

[node name="Marker2D2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1847, 688)

[node name="Marker2D3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(57, 665)

[node name="Marker2D4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(65, 972)

[node name="EnemySpawner" type="Node" parent="." node_paths=PackedStringArray("spawn_points_container", "target_container")]
script = ExtResource("9_7r4gi")
enemy_scenes = Array[PackedScene]([ExtResource("5_4mrxx"), ExtResource("5_qfnet"), ExtResource("7_7r4gi")])
spawn_points_container = NodePath("../SpawnPoints")
target_container = NodePath("../ActorConteiner")

[node name="Timer" type="Timer" parent="EnemySpawner"]
wait_time = 3.0
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="GameUI" parent="." instance=ExtResource("9_w7kh3")]

[connection signal="timeout" from="EnemySpawner/Timer" to="EnemySpawner" method="_on_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
